# hypothesis_generator

./: .gitignore  README.md  apis.py  baseline.py  config.yaml  draw_ablation.py  draw_results.py  llm.py  logging_config.py  memory_manager.py  metrics.py  pyproject.toml  rag.py  tools.py  workflow.py
agents/: memory_manager.py  temp.py  test.py  tools.py  workflow.py
agents_temp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: dataset.json
results/: metrics_agent_120B.json  metrics_baseline_120B.json  metrics_baseline_17B.json  metrics_baseline_27B.json  metrics_baseline_70B.json  metrics_llm_120B.json  metrics_llm_17B.json  metrics_llm_27B.json  metrics_llm_70B.json  metrics_summary_agent_120B.json  metrics_summary_baseline_120B.json  metrics_summary_baseline_17B.json  metrics_summary_baseline_27B.json  metrics_summary_baseline_70B.json  metrics_summary_llm_120B.json  metrics_summary_llm_17B.json  metrics_summary_llm_27B.json  metrics_summary_llm_70B.json  output_agent.json  output_baseline.json  output_llm.json
